--- a/about.html
+++ b/about.html
@@ -173,7 +173,8 @@
 							Монтаж, обслуживание,
 							гарантийный ремонт.<br>
 							Рынок <a href="http://market-sevastopol.ru/" >Южный </a> г.Севастополь. Самое большое предложение хозяйственных и строительных товаров.<br>
-	  				    </div>
+							<a href="http://cleanersev.ru/" >Уборка квартир </a> г.Севастополь. <br>
+						</div>
 
 					</div>
 				</div>
