--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="shortcut icon" href="favicon.ico">
 		<!-- Author Meta -->
 		<meta name="author" content="EsQırım">
+		<link rel="cononical" href="http://vorota-sevastopol.ru/">
 		<!-- Meta Description -->
 		<meta name="description" content="978 7590354 Ворота Продажа Монтаж Сервис. Быстро Качественно Недорого.">
 		<!-- Meta Keyword -->
