--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="EsQırım">
 		<link rel="cononical" href="http://vorota-sevastopol.ru/">
 		<!-- Meta Description -->
-		<meta name="description" content="978 7590354 Ворота Продажа Монтаж Сервис. Быстро Качественно Недорого.">
+		<meta name="description" content="989 2845964 Ворота Продажа Монтаж Сервис. Быстро Качественно Недорого.">
 		<!-- Meta Keyword -->
 		<meta name="keywords" content="ворота, купить ворота, ворота калитка цена, откатные ворота цена, купить ворота цена, ворота цена, секционные, распашные ворота, автоматические ворота, солнце защита, перила, автоматика, пергола, маркизы, рафшторы, Севастополь">
 		<!-- meta character set -->
@@ -148,7 +148,7 @@
                                 Качественно, в срок, недорого. <br><br>
 						    	<a href="about.html" class="primary-btn2 header-btn text-uppercase " style="font-size: 0.5em" >Обратитесь к нам!</a><br><br>
 									<a style="color:#0000ff font-size:30px margin-bottom:20px" 
-									href="tel:+79787590354"> +7 978 759 03 54</a>
+									href="tel:+79892845964"> +7 989 284 5964</a>
 						   </div>
 						</div>
 						
@@ -1031,10 +1031,10 @@
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             <p class="col-lg-12 col-sm-12 footer-text m-0 text-white">
                 СевАвтоВорота 
-				<a  href="tel:+79787590354"> +7 978 759 03 54 </a> &nbsp;&nbsp;
+				<a  href="tel:+79892845964"> +7 989 284 5964 </a> &nbsp;&nbsp;
                 
                 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by 
-                <a href="tel:+79787590354">  SrPreobr </a> </p> <!-- <i style="color:#BC2FF1"> EsQırım </i> -->
+                <a href="tel:+79892845964">  SrPreobr </a> </p> <!-- <i style="color:#BC2FF1"> EsQırım </i> -->
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					</div>
 				</div>
