--- a/exitdata.html
+++ b/exitdata.html
@@ -8,7 +8,7 @@
 		<!-- Author Meta -->
 		<meta name="author" content="SrPreobr">
 		<!-- Meta Description -->
-		<meta name="description" content="978 7590354 Продажа Монтаж Сервис.  ">
+		<meta name="description" content="989 2845964 Продажа Монтаж Сервис.  ">
 		<!-- Meta Keyword -->
 		<meta name="keywords" content="Ворота, Откатные ворота, Купить ворота, ворота цена, секционные, распашные, Автоматические ворота, солнце защита, перила, автоматика, пергола, маркизы, рафшторы, Севастополь, Крым">
 		<!-- meta character set -->
@@ -63,7 +63,7 @@
 								</div>
 								<div class="table-row">
 									<div class="my-col1 h4">Телефон</div>
-									<div class="my-col2 h4" style="color:#0000ff"><a href="tel:+79787590354"> +7 978 759 03 54 </a></div>
+									<div class="my-col2 h4" style="color:#0000ff"><a href="tel:+79892845964"> +7 978 759 03 54 </a></div>
 								</div>
 								<div class="table-row">
 									<div class="my-col1 h4">Email</div>
@@ -124,7 +124,7 @@
                                    <p> 299045, Севастополь, Флагманская д.4 кв.33, <br>
 									Специализируется на установке автоматических ворот, перил, ролет, солнце защиты.
                                     <br>
-                                    Тел.: <a href="tel:+79787590354"> +7 978 759 03 54 </a><br>
+                                    Тел.: <a href="tel:+79892845964"> +7 989 284 5964 </a><br>
                                     E-Mail: darel64@mail.ru<br>
                                     В дальнейшем-Предприятие.<br>
                                 </p>
@@ -180,10 +180,10 @@
 					<div class="row footer-bottom d-flex justify-content-between">
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             <p class="col-lg-12 col-sm-12 footer-text m-0 text-white">
-                СевАвтоВорота <a style="color:#0000ff font-size:30px margin-bottom:20px" href="tel:+79787590354"> +7 978 759 03 54 </a> &nbsp;&nbsp;
+                СевАвтоВорота <a style="color:#0000ff font-size:30px margin-bottom:20px" href="tel:+79892845964"> +7 978 759 03 54 </a> &nbsp;&nbsp;
                
                 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by 
-                 <a href="tel:+79787590354">  SrPreobr </a> </p> <!-- <i style="color:#BC2FF1"> EsQırım </i> -->
+                 <a href="tel:+79892845964">  SrPreobr </a> </p> <!-- <i style="color:#BC2FF1"> EsQırım </i> -->
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					</div>
 				</div>
