--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
-		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="shortcut icon" href="favicon.svg">
 		<!-- Author Meta -->
 		<meta name="author" content="EsQırım">
 		<link rel="cononical" href="http://vorota-sevastopol.ru/">
